--- a/themes/agency-theme/layouts/partials/clients.html
+++ b/themes/agency-theme/layouts/partials/clients.html
@@ -1,7 +1,7 @@
 {{ "<!-- Clients Aside -->" | safeHTML }}
 <aside class="clients">
     <div class="container">
-        <h3>Et aussi :</h3>
+        <h3>More clients :</h3>
         <div class="row">
             {{ range .Site.Params.clients }}
             <div class="col-md-2 col-sm-3 col-xs-4 client-section">
