--- a/themes/agency-theme/layouts/partials/nav.html
+++ b/themes/agency-theme/layouts/partials/nav.html
@@ -2,7 +2,11 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header page-scroll">
-            <a class="navbar-brand page-scroll" href="#page-top">sapiens<span class="navbar-brand-dot">.</span>sapide</a>
+            <a class="navbar-brand page-scroll" href="#page-top">sapiens<span
+                    class="navbar-brand-dot">.</span>sapide</a>
+        </div>
+        <div class="pull-right language-menu">
+            <a href="https://sapienssapide.fr" target="_self" class=""><i class="fa fa-2x fa-language"></i><span class="language-code">&nbsp;FR</span></a>
         </div>
         {{ "<!-- Collect the nav links, forms, and other content for toggling -->" | safeHTML }}
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -19,37 +23,43 @@
 
                 {{ if .Site.Params.services.enable }}
                 <li>
-                    <a class="page-scroll" href="#services">{{ with .Site.Params.navigation.services }}{{ . | markdownify }}{{ end }}</a>
+                    <a class="page-scroll"
+                            href="#services">{{ with .Site.Params.navigation.services }}{{ . | markdownify }}{{ end }}</a>
                 </li>
                 {{ end }}
 
                 {{ if .Site.Params.technologies.enable }}
                 <li>
-                    <a class="page-scroll" href="#technologies">{{ with .Site.Params.navigation.technologies }}{{ . | markdownify }}{{ end }}</a>
+                    <a class="page-scroll"
+                            href="#technologies">{{ with .Site.Params.navigation.technologies }}{{ . | markdownify }}{{ end }}</a>
                 </li>
                 {{ end }}
 
                 {{ if .Site.Params.portfolio.enable }}
                 <li>
-                    <a class="page-scroll" href="#portfolio">{{ with .Site.Params.navigation.portfolio }}{{ . | markdownify }}{{ end }}</a>
+                    <a class="page-scroll"
+                            href="#portfolio">{{ with .Site.Params.navigation.portfolio }}{{ . | markdownify }}{{ end }}</a>
                 </li>
                 {{ end }}
 
                 {{ if .Site.Params.about.enable }}
                 <li>
-                    <a class="page-scroll" href="#about">{{ with .Site.Params.navigation.about }}{{ . | markdownify }}{{ end }}</a>
+                    <a class="page-scroll"
+                            href="#about">{{ with .Site.Params.navigation.about }}{{ . | markdownify }}{{ end }}</a>
                 </li>
                 {{ end }}
 
                 {{ if .Site.Params.team.enable }}
                 <li>
-                    <a class="page-scroll" href="#team">{{ with .Site.Params.navigation.team }}{{ . | markdownify }}{{ end }}</a>
+                    <a class="page-scroll"
+                            href="#team">{{ with .Site.Params.navigation.team }}{{ . | markdownify }}{{ end }}</a>
                 </li>
                 {{ end }}
 
                 {{ if .Site.Params.contact.enable }}
                 <li>
-                    <a class="page-scroll" href="#contact">{{ with .Site.Params.navigation.contact }}{{ . | markdownify }}{{ end }}</a>
+                    <a class="page-scroll"
+                            href="#contact">{{ with .Site.Params.navigation.contact }}{{ . | markdownify }}{{ end }}</a>
                 </li>
                 {{ end }}
 
